xrl-core/main/default/objects/extRelListConfig__c/extRelListConfig__c.object-meta.xml
<CustomObject>
    <label>ExtRelList Config</label>
    <nameField>
        
        <displayFormat>EXTC-{0000000}</displayFormat>
        
        <label>ExtRelList Config Name</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>ExtRelList Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>