xrl-core/main/default/objects/extRelListConfig__c/fields/ConfigType__c.field-meta.xml
<CustomField>
    <fullName>ConfigType__c</fullName>
    <label>ConfigType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XRL</fullName>
                <default>true</default>
                <label>XRL</label>
            </value>
            <value>
                <fullName>Tabular</fullName>
            </value>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>Comparison</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>