xrl-core/main/default/objects/extRelListConfig__c/fields/JSON__c.field-meta.xml
<CustomField>
    <fullName>JSON__c</fullName>
    <description>colModel configuration</description>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>