xrl-core/main/default/objects/extRelListConfig__c/fields/loadIndex__c.field-meta.xml
<CustomField>
    <fullName>loadIndex__c</fullName>
    <label>loadIndex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>