xrl-core/main/default/objects/extRelListConfig__c/fields/Parent__c.field-meta.xml
<CustomField>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>extRelListConfig__c</referenceTo>
        <relationshipLabel>ExtRelList Configs</relationshipLabel>
        <relationshipName>ExtRelList_Configs</relationshipName>
        <type>Lookup</type>
</CustomField>