xrl-core/main/default/objects/extRelListConfig__c/fields/relFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>relFieldApiName__c</fullName>
    <label>relFieldApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>