xrl-core/main/default/objects/extRelListConfig__c/fields/uniqKey__c.field-meta.xml
<CustomField>
    <fullName>uniqKey__c</fullName>
    <externalId>true</externalId>
    <label>uniqKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>