xrl-core/main/default/objects/extRelListConfig__c/recordTypes/Config.recordType-meta.xml
<RecordType>
    <fullName>Config</fullName>
    <active>true</active>
    <label>Config</label>
</RecordType>