xrl-core/main/default/objects/extRelListConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>sObjApiName__c</columns>
    <columns>relFieldApiName__c</columns>
    <columns>isAdminConfig__c</columns>
    <columns>listViewName__c</columns>
    <columns>Is_Active__c</columns>
    <columns>listViewLabel__c</columns>
    <columns>uniqKey__c</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>